--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.23.1",
+    "axios": "^1.7.9",
     "fabric": "^6.5.4",
     "konva": "^9.3.18",
     "react": "^18.3.1",
