--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
+    "@mui/styled-engine": "^6.4.0",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
     "fabric": "^6.5.4",
+    "google-map-react": "^2.2.1",
     "konva": "^9.3.18",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-fabricjs": "^0.1.6",
     "react-konva": "^19.0.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
+    "react-spinner": "^0.2.7",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
